# sonique

./: .gitignore  README.md  pyproject.toml
backend/: routes.py
backend/engine/: fingerprinting.py  spotify_parser.py
backend/pipeline/: db.py  load.py  match.py
frontend/components/: Detected.jsx
